--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
